# chess

./: .clangd  CMakeLists.txt
src/: board.cpp  board.hpp  constants.hpp  fen.cpp  game.cpp  game.hpp  generate_moves.cpp  main.cpp  pieces.hpp
